.metadata/.plugins/org.eclipse.cdt.ui/TEST1.build.log
03:19:36 **** Incremental Build of configuration Debug for project TEST1 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c ..\main.c -mthumb -mcpu=cortex-m4 -std=gnu11 -D_RTE_ -DARMCM4 -IC:/Users/Falcon/Desktop/EE/STM32/CMSIS/ARM/CMSIS/5.4.0/Device/ARM/ARMCM4/Include -IC:\Users\Falcon\Atollic\TrueSTUDIO\STM32_workspace_9.1\TEST1/RTE -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o main.o 
..\main.c: In function 'main':
..\main.c:53:4: error: 'GPIOB' undeclared (first use in this function)
    GPIOB->MODER  &= ~(0x3 << (BUTTON_PIN*2));
    ^~~~~
..\main.c:53:4: note: each undeclared identifier is reported only once for each function it appears in

03:19:36 Build Finished (took 75ms)

